--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,8 @@
     "express": "^4.19.2",
     "express-rate-limit": "^7.3.1",
     "express-session": "^1.18.0",
+    "helmet": "^7.1.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.0",
     "xss": "^1.0.15"
   },
